# external-dns-dynu-webhook

./: Cargo.toml  Dockerfile  README.md
.cargo/: config.toml
.github/workflows/: docker.yaml
src/: main.rs  state.rs
src/http/: dynu.rs  mod.rs  serde.rs
