[package]
name = "external-dns-dynu-webhook"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.77"
tokio = { version = "1.36.0", features = ["full", "rt-multi-thread", "tracing", ] }
axum = { version = "0.7.4", features = ["ws"] }
axum-macros = "0.4.1"
axum-extra = { version = "0.9.2", features = ["typed-header"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["json"] }
tracing-log = "0.2.0"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
serde_with = "3.10.0"
derive-new = "0.7.0"
#derive_more = { version = "1.0.0", features = ["default"] }
reqwest = "0.12.8"
time = { version = "0.3.36", features = ["macros", "serde", "formatting", "parsing"] }